modules/ldprogram/LDPathProgramParser.py
# Generated from /Users/kford1/Work/ldpenv/ldpathy/bin/../modules/ldprogram/LDPathProgram.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LDPathProgramParser ( Parser ):

    grammarFileName = "LDPathProgram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@prefix'", "'|'", "','", "'/'", "'('", 
                     "')'", "'['", "']'", "'.'", "'is'", "'fn:concat'", 
                     "'::'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "FUNC", "DOUBLECOLONS", 
                      "IRI_REF", "QUOTEDTEXT", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", 
                      "VAR1", "VAR2", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", 
                      "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", 
                      "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", 
                      "EXPONENT", "STRING_LITERAL1", "STRING_LITERAL2", 
                      "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", "ECHAR", 
                      "NIL", "ANON", "PN_CHARS_U", "VARNAME", "PN_PREFIX", 
                      "PN_LOCAL", "EQUALS", "COLON", "SEMICOLON", "WS", 
                      "COMMENTS" ]

    RULE_program = 0
    RULE_prologue = 1
    RULE_prefixDecl = 2
    RULE_instructions = 3
    RULE_instruction = 4
    RULE_returnVal = 5
    RULE_queryPath = 6
    RULE_qnameExpr = 7
    RULE_qName = 8
    RULE_datatype = 9
    RULE_datatypeValue = 10
    RULE_typefilter = 11

    ruleNames =  [ "program", "prologue", "prefixDecl", "instructions", 
                   "instruction", "returnVal", "queryPath", "qnameExpr", 
                   "qName", "datatype", "datatypeValue", "typefilter" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    FUNC=11
    DOUBLECOLONS=12
    IRI_REF=13
    QUOTEDTEXT=14
    PNAME_NS=15
    PNAME_LN=16
    BLANK_NODE_LABEL=17
    VAR1=18
    VAR2=19
    LANGTAG=20
    INTEGER=21
    DECIMAL=22
    DOUBLE=23
    INTEGER_POSITIVE=24
    DECIMAL_POSITIVE=25
    DOUBLE_POSITIVE=26
    INTEGER_NEGATIVE=27
    DECIMAL_NEGATIVE=28
    DOUBLE_NEGATIVE=29
    EXPONENT=30
    STRING_LITERAL1=31
    STRING_LITERAL2=32
    STRING_LITERAL_LONG1=33
    STRING_LITERAL_LONG2=34
    ECHAR=35
    NIL=36
    ANON=37
    PN_CHARS_U=38
    VARNAME=39
    PN_PREFIX=40
    PN_LOCAL=41
    EQUALS=42
    COLON=43
    SEMICOLON=44
    WS=45
    COMMENTS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prologue(self):
            return self.getTypedRuleContext(LDPathProgramParser.PrologueContext,0)


        def instructions(self):
            return self.getTypedRuleContext(LDPathProgramParser.InstructionsContext,0)


        def EOF(self):
            return self.getToken(LDPathProgramParser.EOF, 0)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = LDPathProgramParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.prologue()
            self.state = 25
            self.instructions()
            self.state = 26
            self.match(LDPathProgramParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrologueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prefixDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LDPathProgramParser.PrefixDeclContext)
            else:
                return self.getTypedRuleContext(LDPathProgramParser.PrefixDeclContext,i)


        def getRuleIndex(self):
            return LDPathProgramParser.RULE_prologue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrologue" ):
                listener.enterPrologue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrologue" ):
                listener.exitPrologue(self)




    def prologue(self):

        localctx = LDPathProgramParser.PrologueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prologue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LDPathProgramParser.T__0:
                self.state = 28
                self.prefixDecl()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrefixDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PNAME_NS(self):
            return self.getToken(LDPathProgramParser.PNAME_NS, 0)

        def IRI_REF(self):
            return self.getToken(LDPathProgramParser.IRI_REF, 0)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_prefixDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixDecl" ):
                listener.enterPrefixDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixDecl" ):
                listener.exitPrefixDecl(self)




    def prefixDecl(self):

        localctx = LDPathProgramParser.PrefixDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_prefixDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(LDPathProgramParser.T__0)
            self.state = 35
            self.match(LDPathProgramParser.PNAME_NS)
            self.state = 36
            self.match(LDPathProgramParser.IRI_REF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstructionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LDPathProgramParser.InstructionContext)
            else:
                return self.getTypedRuleContext(LDPathProgramParser.InstructionContext,i)


        def getRuleIndex(self):
            return LDPathProgramParser.RULE_instructions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstructions" ):
                listener.enterInstructions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstructions" ):
                listener.exitInstructions(self)




    def instructions(self):

        localctx = LDPathProgramParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instructions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LDPathProgramParser.VARNAME:
                self.state = 38
                self.instruction()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstructionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnVal(self):
            return self.getTypedRuleContext(LDPathProgramParser.ReturnValContext,0)


        def EQUALS(self):
            return self.getToken(LDPathProgramParser.EQUALS, 0)

        def queryPath(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LDPathProgramParser.QueryPathContext)
            else:
                return self.getTypedRuleContext(LDPathProgramParser.QueryPathContext,i)


        def DOUBLECOLONS(self):
            return self.getToken(LDPathProgramParser.DOUBLECOLONS, 0)

        def datatype(self):
            return self.getTypedRuleContext(LDPathProgramParser.DatatypeContext,0)


        def SEMICOLON(self):
            return self.getToken(LDPathProgramParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)




    def instruction(self):

        localctx = LDPathProgramParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.returnVal()
            self.state = 45
            self.match(LDPathProgramParser.EQUALS)
            self.state = 46
            self.queryPath(0)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LDPathProgramParser.T__1:
                self.state = 47
                self.match(LDPathProgramParser.T__1)
                self.state = 48
                self.queryPath(0)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(LDPathProgramParser.DOUBLECOLONS)
            self.state = 55
            self.datatype()
            self.state = 56
            self.match(LDPathProgramParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnValContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(LDPathProgramParser.VARNAME, 0)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_returnVal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnVal" ):
                listener.enterReturnVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnVal" ):
                listener.exitReturnVal(self)




    def returnVal(self):

        localctx = LDPathProgramParser.ReturnValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnVal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(LDPathProgramParser.VARNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryPathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qnameExpr(self):
            return self.getTypedRuleContext(LDPathProgramParser.QnameExprContext,0)


        def queryPath(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LDPathProgramParser.QueryPathContext)
            else:
                return self.getTypedRuleContext(LDPathProgramParser.QueryPathContext,i)


        def getRuleIndex(self):
            return LDPathProgramParser.RULE_queryPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryPath" ):
                listener.enterQueryPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryPath" ):
                listener.exitQueryPath(self)



    def queryPath(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LDPathProgramParser.QueryPathContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_queryPath, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LDPathProgramParser.T__8, LDPathProgramParser.FUNC, LDPathProgramParser.QUOTEDTEXT, LDPathProgramParser.PNAME_LN]:
                self.state = 61
                self.qnameExpr()
                pass
            elif token in [LDPathProgramParser.T__4]:
                self.state = 62
                self.match(LDPathProgramParser.T__4)
                self.state = 63
                self.queryPath(0)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LDPathProgramParser.T__1:
                    self.state = 64
                    self.match(LDPathProgramParser.T__1)
                    self.state = 65
                    self.queryPath(0)
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(LDPathProgramParser.T__5)
                pass
            elif token in [LDPathProgramParser.T__6]:
                self.state = 73
                self.match(LDPathProgramParser.T__6)
                self.state = 74
                self.queryPath(0)
                self.state = 75
                self.match(LDPathProgramParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 85
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = LDPathProgramParser.QueryPathContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_queryPath)
                        self.state = 79
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 80
                        self.match(LDPathProgramParser.T__2)
                        self.state = 81
                        self.queryPath(6)
                        pass

                    elif la_ == 2:
                        localctx = LDPathProgramParser.QueryPathContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_queryPath)
                        self.state = 82
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 83
                        self.match(LDPathProgramParser.T__3)
                        self.state = 84
                        self.queryPath(5)
                        pass

             
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class QnameExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(LDPathProgramParser.FUNC, 0)

        def queryPath(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LDPathProgramParser.QueryPathContext)
            else:
                return self.getTypedRuleContext(LDPathProgramParser.QueryPathContext,i)


        def PNAME_LN(self):
            return self.getToken(LDPathProgramParser.PNAME_LN, 0)

        def LANGTAG(self):
            return self.getToken(LDPathProgramParser.LANGTAG, 0)

        def typefilter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LDPathProgramParser.TypefilterContext)
            else:
                return self.getTypedRuleContext(LDPathProgramParser.TypefilterContext,i)


        def QUOTEDTEXT(self):
            return self.getToken(LDPathProgramParser.QUOTEDTEXT, 0)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_qnameExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQnameExpr" ):
                listener.enterQnameExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQnameExpr" ):
                listener.exitQnameExpr(self)




    def qnameExpr(self):

        localctx = LDPathProgramParser.QnameExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_qnameExpr)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(LDPathProgramParser.FUNC)
                self.state = 91
                self.match(LDPathProgramParser.T__4)
                self.state = 92
                self.queryPath(0)
                self.state = 93
                self.match(LDPathProgramParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(LDPathProgramParser.PNAME_LN)
                self.state = 96
                self.match(LDPathProgramParser.T__6)
                self.state = 97
                self.match(LDPathProgramParser.LANGTAG)
                self.state = 98
                self.match(LDPathProgramParser.T__7)
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 99
                        self.match(LDPathProgramParser.T__3)
                        self.state = 100
                        self.queryPath(0) 
                    self.state = 105
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(LDPathProgramParser.PNAME_LN)
                self.state = 107
                self.match(LDPathProgramParser.T__6)
                self.state = 108
                self.typefilter()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LDPathProgramParser.T__1:
                    self.state = 109
                    self.match(LDPathProgramParser.T__1)
                    self.state = 110
                    self.typefilter()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 116
                self.match(LDPathProgramParser.T__7)
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 117
                        self.match(LDPathProgramParser.T__3)
                        self.state = 118
                        self.queryPath(0) 
                    self.state = 123
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.match(LDPathProgramParser.PNAME_LN)

                self.state = 125
                self.match(LDPathProgramParser.T__3)
                self.state = 126
                self.queryPath(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.match(LDPathProgramParser.PNAME_LN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 128
                self.match(LDPathProgramParser.QUOTEDTEXT)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 129
                self.match(LDPathProgramParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PN_PREFIX(self, i:int=None):
            if i is None:
                return self.getTokens(LDPathProgramParser.PN_PREFIX)
            else:
                return self.getToken(LDPathProgramParser.PN_PREFIX, i)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_qName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQName" ):
                listener.enterQName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQName" ):
                listener.exitQName(self)




    def qName(self):

        localctx = LDPathProgramParser.QNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_qName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(LDPathProgramParser.PN_PREFIX)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LDPathProgramParser.COLON:
                self.state = 133
                self.match(LDPathProgramParser.COLON)
                self.state = 134
                self.match(LDPathProgramParser.PN_PREFIX)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatatypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatypeValue(self):
            return self.getTypedRuleContext(LDPathProgramParser.DatatypeValueContext,0)


        def getRuleIndex(self):
            return LDPathProgramParser.RULE_datatype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatatype" ):
                listener.enterDatatype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatatype" ):
                listener.exitDatatype(self)




    def datatype(self):

        localctx = LDPathProgramParser.DatatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_datatype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.datatypeValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatatypeValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PNAME_LN(self):
            return self.getToken(LDPathProgramParser.PNAME_LN, 0)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_datatypeValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatatypeValue" ):
                listener.enterDatatypeValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatatypeValue" ):
                listener.exitDatatypeValue(self)




    def datatypeValue(self):

        localctx = LDPathProgramParser.DatatypeValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_datatypeValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(LDPathProgramParser.PNAME_LN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypefilterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PNAME_LN(self, i:int=None):
            if i is None:
                return self.getTokens(LDPathProgramParser.PNAME_LN)
            else:
                return self.getToken(LDPathProgramParser.PNAME_LN, i)

        def getRuleIndex(self):
            return LDPathProgramParser.RULE_typefilter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypefilter" ):
                listener.enterTypefilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypefilter" ):
                listener.exitTypefilter(self)




    def typefilter(self):

        localctx = LDPathProgramParser.TypefilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_typefilter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(LDPathProgramParser.PNAME_LN)
            self.state = 145
            self.match(LDPathProgramParser.T__9)
            self.state = 146
            self.match(LDPathProgramParser.PNAME_LN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.queryPath_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def queryPath_sempred(self, localctx:QueryPathContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         




